public/stylesheets/styles.css
body {
  font-family: Lato, Arial, Helvetica, sans-serif;
  font-size: 15px;
  line-height: 1.5;
  padding: 0;
  margin: 0;
  background-color: #f4f4f4;
}

.container {
  width: 80%;
  margin: auto;
  overflow: hidden;
}

header{
  background: #ffffff;
  color: black;
  padding-top: 15px;
  min-height: 70px;
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
  position: fixed;
  width: 100%;
  top: 0px;
}

header a {
  color: black;
  text-decoration: none;
  text-transform: uppercase;
  font-size: 15px;
}

header ul{
  margin: 0;
  padding: 0;
}
header li{
  float: left;
  display: inline;
  padding: 0 15px 0 15px;
}
header #branding{
  float: left;
}

header #branding{
  margin: 0;
}

header nav{
  float: right;
  margin-top: 15px;
}

header .highlight, header .current a {
  color: green;
}


#mapsection{
  width: 100%;
  height: 600px;
  margin-top: 85px;
  position: fixed;
}

#map{
  width: 100%;
  height: 100%;
}

#options{
  margin-top: 685px;
  height: 1000px;
  width: 100%;
  position: fixed;
  z-index: -1;
}

#side_bar{
  overflow-y: auto;
}

#showcase{
  box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
  margin-top: 60px;
  color: white;
  text-align: center;
  min-height: 600px;
  width: 100%;
  overflow: hidden;
  background-attachment: fixed;
  background-size: cover;
  background-repeat: no-repeat;
  background-position-y: -270px;
  text-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
}

#showcase h1{
  margin-top: 150px;
  font-size: 60px;
  margin-bottom: 10px;
}

#showcase h2{
  font-size: 30px;
}










#overview{

}

.container-overview{
  height: 1000px;
  width: 80%;
  margin: auto;
  overflow: hidden;
}

